[project]
name = "sts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "groq>=0.30.0",
    "langchain-community>=0.3.27",
    "livekit-agents[azure,cartesia,deepgram,groq,silero,turn-detector]~=1.2",
    "livekit-plugins-groq>=1.2.1",
    "livekit-plugins-noise-cancellation~=0.2.1",
    "mem0ai>=0.1.114",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
