[project]
name = "sts"
version = "0.1.0"
description = "Voice Agent for Twiddles E-commerce Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.104.0",
    "groq>=0.30.0",
    "langchain-community>=0.3.27",
    "livekit>=1.0.0",
    "livekit-agents[azure,cartesia,deepgram,groq,silero,turn-detector]~=1.2",
    "livekit-plugins-groq>=1.2.1",
    "livekit-plugins-noise-cancellation~=0.2.1",
    "mem0ai>=0.1.114",
    "pymongo>=4.6.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
